@startuml
left to right direction

package "Store" {
    class Product {
        {field} name : String
        {field} price : Float
        {field} discount : Float
        {field} stock : Integer
        {field} img : String
        {field} desc : String
        {field} brand : String
        {field} isActive : Boolean
    }

    enum TagType {
        BUREAUTIQUE,
        GAMING,
        CREATION,
        DEVELOPPEMENT
    }

    class Cpu {
        {field} frequency : Float
        {field} cacheL1 : Integer
        {field} cacheL2 : Integer
        {field} cacheL3 : Integer
        {field} nbHeart : Integer
        {field} nbThread : Integer
        {field} hasVentirad : Boolean
        {field} socketType : SocketType
        {field} lithography : Integer
        {field} ramFrequencyMax : Float
        {field} consumption : Int
        {field} hasGpu : Boolean
    }

    class Gpu {
        {field} frequency : Float
        {field} memory : Integer
        {field} consumption : Integer
        {field} clockSpeed : Integer
        {field} lithography : Integer
        {field} output : String
        {field} inputPower : String
        {field} bus : BusType
    }

    enum BusType {
        PCI,
        AGP,
        PCI_EXPRESS_1,
        PCI_EXPRESS_2,
        PCI_EXPRESS_3,
        PCI_EXPRESS_4,
        PCI_EXPRESS_5
    }

    class HardDrive {
        {field} size : Integer
        {field} speedWrite : Float
        {field} speedRead : Float
        {field} type : MemoryType
    }

    enum MemoryType {
        HDD,
        SSD,
        M2
    }

    class Ram {
        {field} speed : Integer
        {field} type : RamType
        {field} frequency : Float
        {field} unitSize : Integer
        {field} quantity : Integer
        {field} cas : String
    }

    enum RamType {
        DDR3,
        DDR4,
        DDR5
    }

    class Psu {
        {field} power : Integer
        {field} certification : String
        {field} modularity : ModularityType
        {field} nbSata : Integer
        {field} nbPciE : Integer
        {field} outputs : String
    }

    enum ModularityType {
        NON_MODULAIRE,
        SEMI_MODULAIRE,
        MODULAIRE
    }

    class Ventirad {
        {field} sockets : Array
        {field} rangeFanSpeed : String
        {field} noise : Integer
        {field} hasThermalPaste : Boolean
    }

    class Dimension {
        {field} height : Integer
        {field} width : Integer
        {field} length : Integer
    }

    enum SocketType {
        AM4,
        TR4,
        LGA_1150,
        LGA_1151,
        LGA_2066,
        LGA_1200
    }

    class Mbe {
        {field} socketCpu : SocketType
        {field} ramType : RamType
        {field} ramFrequencyMax : Float
        {field} ramSizeMax : Float
        {field} pciOutputs : String
        {field} displayOutput : String
        {field} storageOutput : String
        {field} insideIO : String
        {field} backPanelOutput : String
        {field} bios : String
        {field} format : FormatType
    }

    enum FormatType {
        ATX,
        FLEX_ATX,
        MICRO_ATX,
        MINI_ATX,
        EATX,
        AT
    }

    class Case {
        {field} type : CaseType
        {field} formats : Array
        {field} sizeMaxGpu : Integer
        {field} sizeMaxVentirad : Integer
        {field} sizeMaxPsu : Integer
        {field} hardDriveSlots : String
        {field} frontPanelOutputs : String
        {field} fanIncluded : String
        {field} fanSlotsAvailable : String
        {field} watercoolingCompatibility : String
    }

    enum CaseType {
        PETITE,
        MOYENNE,
        GRANDE
    }
}

package Users {
    class User {
        {field} firstName : String
        {field} lastName : String
        {field} mail : String
        {field} password : String
        {field} isAdmin : Boolean
        {field} birthDate : LocalDate
        {field} isActive : Boolean
        //stripeId String for later: stripe payment
    }

    class Address {
        {field} zipCode : String
        {field} city : String
        {field} streetNumber : String
        {field} streetName : String
        {field} complementary : String
        {field} firstName : String
        {field} lastName : String
    }

}

package Sale {

    class Order {
        {field} createdAt : LocalDate
        {field} updatedAt : LocalDate
        {field} validatedAt : LocalDate
        {field} status : OrderStatus

        //sessionId String for later: stripe payment
    }

    class OrderLine {
    }

    enum OrderStatus {
        PROCESSING,
        PAYED,
        FAILED
    }

    class Config {
        {field} name : String
        {field} description : String
        {field} isComplete : Bollean
        {field} tags : TagType
        {field} hash : String
        {field} cpuPrice : Float
        {field} cpuPrice : Float
        {field} ram1Price : Float
        {field} ram2Price : Float
        {field} psuPrice : Float
        {field} casePrice : Float
        {field} ventiradPrice : Float
        {field} hd1Price : Float
        {field} hd2Price : Float
    }
}

OrderLine "One" --* "One" Config : config

Order "Many" --o "One" User : buyer

Config "Many" --o "One" Cpu : cpu

Config " " --o "One" Gpu : gpu

Config " " --o "One" Psu : psu

Config " " --o "One" Ventirad : fan

Config " " --o "One" Mbe : mbe

Config " " --o "One" Case : case

Config " " --o "One" User : owner

OrderLine "Many" --* "One" Order : order

Config " " o--o "Many" Ram : rams

Config " " o--o "Many" HardDrive : hds



User "One" *--* "One" Address : deliveryAdress

User "One" *--* "One" Address : facturationAddress

Dimension "One" -- "One" Gpu : dimension

Dimension "One" *--* "One" Ventirad : dimension

Dimension "One" *--* "One" Case : dimension

Address "One" *--* "One" Order : deliveryAddress


Cpu .. SocketType
Mbe  .. SocketType
HardDrive  .. MemoryType
Config  .. TagType
Product  .. TagType
BusType  .. Gpu
OrderStatus .. Order
FormatType .. Mbe
RamType .. Ram
ModularityType .. Psu
CaseType .. Case

Case --|> Product
Gpu --|> Product
Cpu --|> Product
Ram --|> Product
Mbe --|> Product
HardDrive --|> Product
Ventirad --|> Product
Psu --|> Product
@enduml
